deployment/minikube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laser-service
  namespace: phoenix
spec:
  type: ClusterIP
  selector:
    app: laser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
