deployment/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laser-ingress
  namespace: phoenix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: dashboard-local.lambdatest.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: laser-service
              port: 
                number: 80
